2008-06-20  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/: ui/webcam_managerdialog.py
	playing pipeline through draw_window success. Trying to use record() for SmartBin

2008-06-20  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/: ui/webcam_managerdialog.py
	Attempt to rewrite webcam_managerdialog using PlayGround and SmartCaptureBin (Problem: cannot sync video to the drawing widget)

2008-06-18  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/: ui/webcam_managerdialog.py, bin.py
	Added SmartCaptureBin and test degbug version of webcam_managerdialog (for debuging)

2008-07-18  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/viewer.py:
	Don't update time/duration if currently playing SmartBin doesn't have
	an associated objectfactory.

2008-06-15  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/ui/: netstream_managerdialog.py, cam_capture.glade,
	  net_capture.glade, webcam_managerdialog.py,
          netstream_managerdialog.py, cam_capture.glade, 
          net_capture.glade

2008-09-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/mainwindow.py:
	Make the advanced timeline the default one.
	This is a trial, the code for the simple timeline is still
	present.

2008-09-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/bin.py:
	* pitivi/settings.py:
	* pitivi/ui/exportsettingswidget.py:
	Enable muxing of raw audio/video streams.

2008-09-11  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/ui/util.py:
	* tests/test_proxy.py:
	fix test suite and ProxyItem class, so that test cases actually pass

2008-09-11  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* tests/testproxy.py:
	* tests/test_proxy.py:
	rename test suite so it is actually run

2008-09-11  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/ui/util.py:
	added a new type of canvas item, ProxyItem
	* tests/testproxy.py:
	test suite for ProxyItem

2008-09-04  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/ruler.py: